--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,4 @@
-name: cd
+name: deploy
 on:
   workflow_dispatch:
   push:
@@ -12,17 +12,18 @@ jobs:
       contents: read
     steps:
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
       - id: 'auth'
-        name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+        uses: 'google-github-actions/auth@v2'
         with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.SERVICE_ACCOUNT }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
       - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v1'
-        with:
-          version: '>= 379.0.0'
-      - run: ls -la
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+
       - name: 'Build and deploy'
         run: 'gcloud builds submit . --account ${{ secrets.SERVICE_ACCOUNT }} --substitutions _LOCATION=${{ secrets.GCP_REGION }},_REPOSITORY=${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }},_IMAGE=${{ secrets.GCP_IMAGE }},_SERVICE_NAME=${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}'
