--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: Create dot env file
+        run: |
+          touch .env.production
+          echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env.production
+          echo "PUBLIC_TWITTER_ID=${{ secrets.PUBLIC_TWITTER_ID }}" >> .env.production
+          echo "SPOTIFY_CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}" >> .env.production
+          echo "SPOTIFY_CLIENT_SECRET=${{ secrets.SPOTIFY_CLIENT_SECRET }}" >> .env.production
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
