--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -35,6 +35,6 @@ jobs:
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
-
+      - run: ls -la
       - name: 'Build and deploy'
         run: 'gcloud builds submit . --substitutions _LOCATION=${{ secrets.GCP_REGION }},_REPOSITORY=${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }},_IMAGE=${{ secrets.GCP_IMAGE }},_SERVICE_NAME=${{ secrets.GCP_CLOUD_RUN_SERVICE_NAME }}'
