fix. ignore files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,12 @@
 .git
-.svelte-kit
 .vscode
-.eslintignore
-.eslintrc.cjs
-.gitignore
-.npmrc
-.prettierignore
-.prettierrc
 .github
 node_modules
-.env.*
+!.env.*
 !.env
+.gcloudignore
+cloudbuild.yaml
+cloudbuild*.yaml
+LICENSE
+README.md
+build.sh
