--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,10 +1,22 @@
+.dockerignore
+.gcloudignore
 .git
 .github
+.svelte-kit
+.vscode
+.eslintignore
+.eslintrc.cjs
+.gitignore
+.npmrc
+.prettierignore
+.prettierrc
 .DS_Store
-node_modules
-build
 .svelte-kit
 .env
 .env.example
 .vscode
+node_modules
+build
+cloudbuild*
+LICENSE
 !.env.production
