--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-	"name": "search-spotify-genre",
-	"version": "0.0.1",
-	"private": true,
-	"engines": {
-		"npm": "please_use_bun_instead",
-		"yarn": "please_use_bun_instead",
-		"pnpm": "please_use_bun_instead"
-	},
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build --mode production",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "vitest",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^2.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.14",
-		"dotenv": "^16.3.1",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"flowbite": "^2.2.0",
-		"flowbite-svelte": "^0.44.20",
-		"flowbite-svelte-icons": "^0.4.5",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.0",
-		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^4.2.7",
-		"svelte-adapter-bun": "^0.5.1",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.3.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.0",
-		"vitest": "^1.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@popperjs/core": "^2.11.8",
-		"@spotify/web-api-ts-sdk": "^1.1.2",
-		"hono": "3.11.4",
-		"zod": "^3.22.4"
-	}
+  "name": "search-spotify-genre",
+  "version": "0.0.1",
+  "private": true,
+  "engines": {
+    "npm": "please_use_bun_instead",
+    "yarn": "please_use_bun_instead",
+    "pnpm": "please_use_bun_instead"
+  },
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build --mode production",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "flowbite": "^2.2.0",
+    "flowbite-svelte": "^0.44.20",
+    "flowbite-svelte-icons": "^0.4.5",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "svelte": "^4.2.7",
+    "svelte-adapter-bun": "^0.5.1",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.2",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@spotify/web-api-ts-sdk": "^1.1.2",
+    "hono": "^3.12.2",
+    "zod": "^3.22.4"
+  }
 }
