--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest",
+    "test:cov": "vitest --coverage",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
@@ -28,8 +29,10 @@
     "@sveltejs/adapter-node": "^2.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@testing-library/svelte": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^1.1.3",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.3.1",
     "eslint": "^8.28.0",
@@ -38,6 +41,7 @@
     "flowbite": "^2.2.0",
     "flowbite-svelte": "^0.44.20",
     "flowbite-svelte-icons": "^0.4.5",
+    "jsdom": "^23.2.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "prettier": "^3.0.0",
